...
                onRoundUpChanged = { showCategory = it },
                modifier = Modifier.padding(bottom = 32.dp)
            )

            // Menampilkan nilai BMI
            Text(
                text = "Indeks Massa Tubuh (IMT):",
                color = Color(0xFF90A1C1), // Warna biru tua
                fontWeight = FontWeight.Bold, // Membuat teks tebal
                style = MaterialTheme.typography.bodyMedium.copy(
                    fontSize = 25.sp
                )
            )
...
    Row(
        modifier = modifier
            .fillMaxWidth()
            .size(48.dp),
        verticalAlignment = Alignment.CenterVertically
    ) {
        Text(text = "Tampilkan Kategori BMI")
        Switch(
            checked = roundUp,
            onCheckedChange = onRoundUpChanged,
            modifier = Modifier
                .fillMaxWidth()
                .wrapContentWidth(Alignment.End)
...
